# vocab-trainer

./: .gitignore  README.md  package.json  svelte.config.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/prisma/: schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/src/: main.rs
src/lib/components/: AddVocab.svelte  ListVocabs.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
