[package]
name = "app"
version = "0.1.0"
description = "Vocab Trainer is a vocab trainer."
authors = ["Jonas Fröller"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" }
tokio = { version = "1.35.0", features = ["full"] }
specta = { version = "1.0.5" }
tauri-specta = { version = "1.0.2", features = ["typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[workspace]
members = [
    "prisma-cli"
]
resolver = "2"
